anasayfa üzerinde değişiklikler

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>TASARIM</h3>
-                                    <a class="btn" href="img/tasarim.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="tasarim.html">+</a>
                                 </div>
                             </div>
                         </div>
@@ -477,7 +477,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>KALIP İMALATI</h3>
-                                    <a class="btn" href="img/kalipimalati3.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="kalipImalati.html">+</a>
                                 </div>
                             </div>
                         </div>
@@ -493,7 +493,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>PLASTİK ENJEKSİYON</h3>
-                                    <a class="btn" href="img/plastik.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="plastikEnjeksiyon.html">+</a>
                                 </div>
                             </div>
                         </div>
@@ -509,7 +509,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>ALÜMİNYUM ENJEKSİYON</h3>
-                                    <a class="btn" href="img/alum_enjeksiyon.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="aluminyumEnjeksiyon.html" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -525,7 +525,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>TALAŞLI İMALAT</h3>
-                                    <a class="btn" href="img/talasliimalat.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="talasliImalat.html">+</a>
                                 </div>
                             </div>
                         </div>
@@ -541,7 +541,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>MONTAJ</h3>
-                                    <a class="btn" href="img/montaj.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="montaj.html">+</a>
                                 </div>
                             </div>
                         </div>
