--- a/iletisim.html
+++ b/iletisim.html
@@ -266,9 +266,9 @@
                         <div class="justify-content-start">
                             <p>&copy; <a href="index.html">EMİN KARDEŞLER</a> || Karakterimizi ismimize verdik</p>
                         </div>
-                        <!-- <div class="col-md-6">
-                            <p>Designed By <a href="https://htmlcodex.com">Erdem HHO</a></p>
-                        </div> -->
+                        <div class="col-md-6">
+                            <p>Designed By <a href="https://github.com/ErdemHHO">Erdem HHO</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
